--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -76,6 +76,7 @@ $golden: #f2c714;
 $green: #53892e;
 $blue: #1c838c;
 $pink: #e13464;
+$purple: #a4349b;
 
 $red-light: #FF7F7F;
 $orange-light: #FFA87C;
