Fix .link-button having weird visited coor

--- a/assets/style/_button.scss
+++ b/assets/style/_button.scss
@@ -14,6 +14,17 @@
     color: $white;
     background-color: $red;
   }
+
+  &:visited {
+    color: $white;
+    background-color: $purple;
+
+    &:hover,
+    &:focus {
+      color: $white;
+      background-color: $orange;
+    }
+  }
 }
 
 .button-flat {
