--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -4,6 +4,7 @@
 @import "variables";
 @import "functions";
 @import "mixins";
+@import "font";
 
 // DO NOT INCLUDE MODULES WITH STYLES.
 // See comment above.
