Add z-index "dropdown"

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -96,6 +96,7 @@ $gray-gradient-colors: #14111f, #444444;
 $black-text-shadow: 0.1em 0.1em 1em black; 
 
 $z-index-header: 900;
+$z-index-dropdown: 1000;
 
 $math-phi: 1.618;
 $math-sqrt-2: 1.414;
