--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -20,6 +20,7 @@ $dark-03: rgba(0, 0, 0, 0.03);
 $dark-04: rgba(0, 0, 0, 0.04); 
 $dark-05: rgba(0, 0, 0, 0.05); 
 $dark-10: rgba(0, 0, 0, 0.1); 
+$dark-15: rgba(0, 0, 0, 0.15); 
 $dark-20: rgba(0, 0, 0, 0.2); 
 $dark-30: rgba(0, 0, 0, 0.3); 
 $dark-40: rgba(0, 0, 0, 0.4); 
