Add color variable 'ocean'

--- a/assets/style/_background.scss
+++ b/assets/style/_background.scss
@@ -47,6 +47,7 @@
 @include make-bg-color("orange", $orange); 
 @include make-bg-color("yellow", $yellow); 
 @include make-bg-color("green", $green); 
+@include make-bg-color("ocean", $ocean); 
 @include make-bg-color("blue", $blue); 
 @include make-bg-color("pink", $pink); 
 @include make-bg-color("gray", $gray-50); 
