--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -76,6 +76,7 @@ $orange: #FF4A26;
 $yellow: #cf9f00;
 $golden: #f2c714;
 $green: #53892e;
+$ocean: #0d4164;
 $blue: #1c838c;
 $pink: #e13464;
 $purple: #a4349b;
@@ -91,7 +92,7 @@ $pink-light: #F099B1;
 $red-gradient-colors: #370014, #8c1411, #cf2534; 
 $orange-gradient-colors: #cf442e, #cf9f00; 
 $green-gradient-colors: #273710, #53892e, #85891d; 
-$blue-gradient-colors: #0d4164, #1c838c, #2cb399; 
+$blue-gradient-colors: $ocean, #1c838c, #2cb399; 
 $pink-gradient-colors: #a43459, #e13464, #ff8578; 
 $gray-gradient-colors: $asphalt, #444444; 
 
