--- a/assets/style/_button.scss
+++ b/assets/style/_button.scss
@@ -40,7 +40,7 @@
     box-shadow: 0 0 0 0.2em rgba(255, 74, 38, 0.3);
   }
   &:hover {
-    background-color: $orange-red;
+    background-color: $luminous-red;
   }
   &:active {
     background-color: $red;
