Add general font classes

--- a/assets/style/_font.scss
+++ b/assets/style/_font.scss
@@ -5,3 +5,13 @@
 .text-semi-big {
   font-size: 1.5em;
 }
+
+.text-center {
+  text-align: center;
+}
+
+.big-letter {
+  font-size: 3em;
+  font-weight: 800;
+  line-height: 1;
+}
