--- a/assets/style/_icon.scss
+++ b/assets/style/_icon.scss
@@ -1,4 +1,5 @@
 .icon {
+  position: relative;
   display: inline-flex;
   justify-content: center;
   align-items: center;
@@ -6,18 +7,49 @@
   height: 1em;
   fill: currentColor;
 
-  &.medium {
-    width: 3em;
-    height: 3em;
+  @for $i from 0 through 20 {
+    // Positioning x axis
+    &.left-#{$i * 5} {
+      position: absolute;
+      left: percentage($i * 0.05);
+    }
+    &.right-#{$i * 10} {
+      position: absolute;
+      right: percentage($i * 0.05);
+    }
+  }
+  
+  @for $i from 0 through 30 {
+    // Positioning y axis
+    &.top-#{$i} {
+      position: absolute;
+      top: $i * 1em;
+    }
+    &.bottom-#{$i} {
+      position: absolute;
+      bottom: $i * 1em;
+    }
   }
 
-  &.large {
-    width: 5em;
-    height: 5em;
-  }
+  @for $i from 0 through 10 {
+    // Size
+    &.size-#{$i} {
+      width: $i * 1em;
+      height: $i * 1em;
+    }
+    
+    // Rotation
+    $degrees: $i * 5;
+    &.rotate-#{$degrees} {
+      transform: rotate(#{$degrees}deg);
+    }
+    &.rotate-neg-#{$degrees} {
+      transform: rotate(#{$degrees * -1}deg);
+    }
 
-  &.huge {
-    width: 7em;
-    height: 7em;
+    // Opacity
+    &.opacity-#{$i * 10} {
+      opacity: $i * 0.1;
+    }
   }
 }
