--- a/assets/style/_font.scss
+++ b/assets/style/_font.scss
@@ -19,3 +19,21 @@
 .font-white {
   color: $white;
 }
+
+q {
+  quotes: "“" "”" "‘" "’";
+  &:lang(de) {
+    quotes: "„" "“" "‚" "‘";
+  }
+}
+
+.quotation {
+  max-width: 22em;
+  margin: 1em 0 1em 1em;
+  font-size: 1.4em;
+  line-height: 1.3;
+  font-weight: 700;
+  font-style: italic;
+  letter-spacing: 0.01em;
+  color: $gray-20;
+}
