Change styling of phone preview to be a little better

--- a/assets/style/_variables.scss
+++ b/assets/style/_variables.scss
@@ -76,6 +76,7 @@ $gray-00: $white;
 $gray-13: #222;
 $gray-20: #333;
 $gray-26: #444;
+$gray-40: #666;
 $gray-60: #999;
 $gray-93: #eee;
 $gray-100: $black;
