Change panoramic headlines to have fixed margin

--- a/assets/style/_font.scss
+++ b/assets/style/_font.scss
@@ -68,10 +68,16 @@ q {
 // 'pan' stands for 'panoramic'
 .h2-pan {
   font-size: calc(1em + 2vw);
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
 }
 .h3-pan {
   font-size: calc(1em + 1.5vw);
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
 }
 .h4-pan {
   font-size: calc(1em + 1vw);
+  margin-top: 2rem;
+  margin-bottom: 1.5rem;
 }
