Change layout of 'about' header

--- a/assets/style/_font.scss
+++ b/assets/style/_font.scss
@@ -81,3 +81,10 @@ q {
   margin-top: 2rem;
   margin-bottom: 1.5rem;
 }
+
+.h2-spaced,
+.h3-spaced,
+.h4-spaced {
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
