--- a/assets/style/_layout-flex.scss
+++ b/assets/style/_layout-flex.scss
@@ -3,6 +3,26 @@
   flex-direction: column;
 }
 
+.center-vertically {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  & > * {
+    flex-grow: 0;
+  }
+}
+
+.align-items-right {
+  text-align: right;
+  
+  ul {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
+
 // We use `&#{&}#{&}` to stack the same css class on top to increase specitifity.
 
 .flex-edge-bottom {
