--- a/assets/style/_general.scss
+++ b/assets/style/_general.scss
@@ -215,3 +215,20 @@ a.invisible-link {
   padding-left: 0;
   padding-right: 0;
 }
+
+.list-separated {
+  $border: 0.1em solid $dusk-20;
+  list-style-type: none;
+  padding-left: 0;
+  padding-right: 0;
+
+  & > * {
+    padding-top: 1em;
+    padding-bottom: 1em;
+    border-bottom: $border;
+  }
+
+  & > *:first-child {
+    border-top: $border;
+  }
+}
