--- a/assets/style/_general.scss
+++ b/assets/style/_general.scss
@@ -35,22 +35,22 @@ mark {
   display: inline;
 }
 
-h1 {
+h1, .h1 {
   font-size: 2em;
 }
-h2 {
+h2, .h2 {
   font-size: 1.5em;
 }
-h3 {
+h3, .h3 {
   font-size: 1.2em;
 }
-h4 {
+h4, .h4 {
   font-size: 1.1em;
 }
-h5 {
+h5, .h5 {
   font-size: 1.05em;
 }
-h6 {
+h6, .h6 {
   font-size: 1em;
 }
 
